20191127
========
#46150 - Set the Extension-Target-Update in the pom.xml
#46163 - Fix Jackson dependencies versions
#46189 - Revert odata-client-core dependency version

20191112
========
#45574 - Separate DataSource / Base View configuration + add env-dependent properties

20190905
========
#44594 - Fixed: Exception parsing open curly braces in JSON text literals
#44643 - Fixed: Wrong creation of array field structures

20190724
========
#43557 - Navigation properties being ignored from complex types at schema creation type

20190329
========
#42514 - Exception when querying the base view after the access token has expired

20190328
========
#42541 - Increase of the log trace in the OAuth tokens management

20190125
========
#39879 - OAuth 2.0 credentials can only be updated once
#41521 - Added profile errorprone to execute error prone
#41523 - Check and fix errors and CVE with error-prone and dependency check

20180927
========
#39540 - NullPointerException when access token is not found when refreshing OAuth 2.0 credentials
#39579 - Separate "entity collection" and "entity name" in parameters so that different collections of an entity can be accessed

20180903
========
#39047 - Client secret for OAuth2 should be a hidden parameter
#39069 - Authentication cache for OAuth not working as expected
#36303 - Error retrieving Decimal values from an OData4 source
#39213 - "Refr. Token Auth. Method" should have a default value option
#39237 - Fix inheritance between entities (attribute BaseType)
#39329 - Support TLS > 1.0 for java 7

20180820
========
#38628 - Send client credentials through basic authentication or in the body of the response
#29886 - OData 4 wrapper authentication pass-through

20180712
========
#38328 - Added support for HTTPS connections

20180529
========
#29882 - Add service format configuration in OData 4 Wrapper
#35771 - Custom header support for OData 4 Wrapper

20171030
========
#29881 - OAuth2 support in OData4 wrapper